# Concurrentes

./: README.md
tp1/: Cargo.toml  README.md  expected_output.json
tp1/src/: main.rs
tp1/src/data_processing/: data_processor.rs  mod.rs  player_stats.rs  weapon_stats.rs
tp1/src/data_summary/: data_summarizer.rs  deaths_info_summary.rs  mod.rs  player_stats_summary.rs  weapon_stats_summary.rs
tp1/src/file_creation/: file_creation_error.rs  file_creator.rs  json_format.rs  mod.rs
tp2/: README.md
tp2/driver/: Cargo.toml
tp2/driver/src/: driver.rs  lib.rs  main.rs
tp2/driver/src/messages/: driver_messages.rs  internal_driver_messages.rs  mod.rs  passenger_messages.rs
tp2/passenger/: Cargo.toml
tp2/passenger/src/: lib.rs  main.rs  passenger.rs
tp2/payments/: Cargo.toml
tp2/payments/src/: lib.rs  main.rs  messages.rs  payments.rs
tp2/test_data/: passengers.json
