[package]
name = "passenger"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
actix = "0.13.3"
actix-rt = "2.9.0"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
driver = { path = "../driver" }
payments = { path = "../payments" }
rand = "0.8"